se me rompio la header

--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -13,21 +13,35 @@
 
     <div class="grid-ayuda">
 
-    <header>
-
-        <img class="menuLogo" src="../multimedia/img/logomarcaa.png" alt="">
-
-        <nav>
-            <!--inicio barra nav-->
-            <ul class="menuheader">
-                <li class="menuHeader"><a href="../index.html">INICIO</a></li>
-                <li class="menuHeader"><a href="../pages/autos.html">AUTOS</a></li>
-                <li class="menuHeader"><a href="../pages/camionetas.html">CAMIONETAS</a></li>
-                <li class="menuHeader"><a href="#Contacto">CONTACTO</a></li>
-                <li class="menuHeader"><a href="../pages/ayuda.html">AYUDA</a></li>
-            </ul>
-        </nav>
-    </header>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-facu">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="">Toyota</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../pages/autos.html">Autos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../pages/camionetas.html">Camionetas</a>
+                      </li>
+                       <li class="nav-item">
+                        <a class="nav-link" href="#Contacto">Contacto</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../pages/ayuda.html">Ayuda</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+          </header>
 
     <main class="preguntas">
         <div class="portada">
