--- a/index.html
+++ b/index.html
@@ -17,36 +17,35 @@
     <!--grid-->
     <div class="grid-inicio">
 
-        <header>
-          <nav class="navbar navbar-expand-lg bg-facu">
-              <div class="container-fluid">
-                <a class="navbar-brand" href="">Toyota</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="pages/autos.html">Autos</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="pages/camionetas.html">Camionetas</a>
-                    </li>
-                     <li class="nav-item">
-                      <a class="nav-link" href="#Contacto">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="pages/ayuda.html">Ayuda</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
-        </header>
-
+       <header class="cabecera">
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid fs-5 text">
+            <a class="navbar-brand" href="">Toyota</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="pages/autos.html">Autos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="pages/camionetas.html">Camionetas</a>
+                </li>
+                 <li class="nav-item">
+                  <a class="nav-link" href="#Contacto">Contacto</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="pages/ayuda.html">Ayuda</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+       </header>
 
          <!--main-->
 
