--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toyota | Ayuda</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -13,14 +14,14 @@
 
     <div class="grid-ayuda">
 
-        <header>
-            <nav class="navbar navbar-expand-lg bg-facu">
-                <div class="container-fluid">
+        <header class="cabecera">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid fs-5 text">
                   <a class="navbar-brand" href="">Toyota</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+                  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
@@ -97,6 +98,7 @@
         <a class="wsp" href="https://web.whatsapp.com/"><img src="../multimedia/logos/wsp.png" alt="wsp logo"></a>
     </footer>
  </div>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
