agregando mix , extend y mapas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toyota | Home</title>
+    <!--meta description-->
+    <meta name="Toyota nuevo 0km precios de venta y cotizaciones; versiones del catálogo vigente, información tecnica, equipamiento, en Argentina." content="">
+
+    <title>Toyota | PLANES TOYOTA</title>
     <link rel="shortcut icon" href="multimedia/img/logomarcaa.png">
     <!--conexion donde estan los estilos de css de bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -16,7 +19,7 @@
 <body>
     <!--grid-->
     <div class="grid-inicio">
-
+      <!--header-->
        <header class="cabecera">
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid fs-5 text">
@@ -46,6 +49,8 @@
           </div>
         </nav>
        </header>
+
+       <!--fin de header-->
 
          <!--main-->
 
