--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!--fin main-->
 
         <!--footer-->
-        <footer class="bg-dark text-center text-white">
+        <footer class="bg-dark text-center text-white" id="Contacto">
           <div class="container p-4">
         
             <!-- Section: Social media -->
