Ultimos estilos a bs

--- a/pages/autos.html
+++ b/pages/autos.html
@@ -14,7 +14,7 @@
     <div class="grid-autos">
 
         <header class="cabecera">
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg fw-semibold">
                 <div class="container-fluid fs-5 text">
                   <a class="navbar-brand" href="">Toyota</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,18 +49,23 @@
             </div>
 
 
-            <div class="productos-nav">
-                <h2 id="tituloproducto">Productos</h2>
-
-                <nav>
-                    <ul class="lista-productos">
-                        <li><a href="#yaris">Toyota Yaris</a></li>
-                        <li><a href="#corolla">Toyota Corolla</a></li>
-                        <li><a href="#etios">Toyota Etios</a></li>
-                        <li><a href="#prius">Toyota Prius</a></li>
-                        <li><a href="#camry">Toyota Camry</a></li>
-                    </ul>
-                </nav>
+            <ul class="nav justify-content-center fs-3 text text-decoration-underline text-secondary">
+              <li class="nav-item">
+                <a class="nav-link" href="#yaris">Toyota Yaris</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#corolla">Toyota Corolla</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#prius">Toyota Prius</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#etios">Toyota Etios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#camry">Toyota Camry</a>
+              </li>
+            </ul>
 
             </div>
 
