--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="grid-inicio">
       <!--header-->
        <header class="cabecera">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg fw-semibold">
           <div class="container-fluid fs-5 text">
-            <a class="navbar-brand fs-4 text" href="">Toyota</a>
+            <a class="navbar-brand fs-5 text" href="">Toyota</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
