--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -15,7 +15,7 @@
     <div class="grid-ayuda">
 
         <header class="cabecera">
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg fw-semibold">
                 <div class="container-fluid fs-5 text">
                   <a class="navbar-brand" href="">Toyota</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
