--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -48,6 +48,7 @@
         <div class="portada">
             <h1 class="titulo-portada">Preguntas frecuentes</h1>
         </div>
+        
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
@@ -85,9 +86,9 @@
               </div>
             </div>
           </div>
-        </div>
+         </div>
 
-        <div class="accordion" id="accordionExample">
+         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -205,16 +206,16 @@
         <section class="mb-4">
 
           <!-- Facebook -->
-          <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="bi bi-facebook">Facebook</i></a>
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/ToyotaArgentina/" target="_blank"  role="button"><i class="bi bi-facebook">Facebook</i></a>
     
           <!-- Twitter -->
-          <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fab fa-twitter">Twitter</i></a>
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/toyota_arg?lang=es " target="_blank" role="button"><i class="fab fa-twitter">Twitter</i></a>
 
           <!-- Instagram -->
-          <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="fab fa-instagram">Instagram</i></a>
+          <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/toyotaargentina/?hl=es" target="_blank" role="button"><i class="fab fa-instagram">Instagram</i></a>
 
           <!-- Whatsapp -->
-          <a class="btn btn-primary btn-floating m-1" style="background-color: green" href="#!" role="button"><i class="fab fa-github">Whatsapp</i></a>
+          <a class="btn btn-primary btn-floating m-1" style="background-color: green" href="https://web.whatsapp.com/" target="_blank" role="button"><i class="fab fa-github">Whatsapp</i></a>
 
         </section>
 
