--- a/pages/camionetas.html
+++ b/pages/camionetas.html
@@ -124,16 +124,16 @@
           <section class="mb-4">
 
             <!-- Facebook -->
-            <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="bi bi-facebook">Facebook</i></a>
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/ToyotaArgentina/" target="_blank"  role="button"><i class="bi bi-facebook">Facebook</i></a>
       
             <!-- Twitter -->
-            <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fab fa-twitter">Twitter</i></a>
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/toyota_arg?lang=es " target="_blank" role="button"><i class="fab fa-twitter">Twitter</i></a>
 
             <!-- Instagram -->
-            <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="fab fa-instagram">Instagram</i></a>
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/toyotaargentina/?hl=es" target="_blank" role="button"><i class="fab fa-instagram">Instagram</i></a>
 
             <!-- Whatsapp -->
-            <a class="btn btn-primary btn-floating m-1" style="background-color: green" href="#!" role="button"><i class="fab fa-github">Whatsapp</i></a>
+            <a class="btn btn-primary btn-floating m-1" style="background-color: green" href="https://web.whatsapp.com/" target="_blank" role="button"><i class="fab fa-github">Whatsapp</i></a>
 
           </section>
 
