--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="multimedia/img/presentacion.png" class="d-block w-100" alt="presentacion portada">
+                        <img src="multimedia/img/presentacion.png" class="d-block w-100 img-fluid" alt="presentacion portada">
                       </div>
                       <div class="carousel-item">
-                        <img src="multimedia/img/galeria.jpg" class="d-block w-100" alt="...">
+                        <img src="multimedia/img/galeria.jpg" class="d-block w-100 img-fluid" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="multimedia/img/toyota.png" class="d-block w-100" alt="...">
+                        <img src="multimedia/img/toyota.png" class="d-block w-100 img-fluid" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Atras</span>
+                      <span class="visually-hidden">Atrás</span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
