--- a/pages/camionetas.html
+++ b/pages/camionetas.html
@@ -18,7 +18,7 @@
         <header class="cabecera">
             <nav class="navbar navbar-expand-lg fw-semibold">
                 <div class="container-fluid fs-5 text">
-                  <a class="navbar-brand" href="">Toyota</a>
+                  <a class="navbar-brand" href="../index.html">Toyota</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
