--- a/pages/camionetas.html
+++ b/pages/camionetas.html
@@ -85,8 +85,7 @@
               <img src="../multimedia/img/sw4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Toyota SW4</h5>
-                <p class="card-text">La nueva SW4 presenta novedades en el diseño exterior e interior, cambios mecánicos y actualizaciones en el equipamiento. A diferencia de lo que ocurrió con la Hilux, la nueva gama de SW4 no altera la gama de versiones que venía ofreciendo el modelo hasta la fecha. Los cambios estéticos de la nueva SW4 son superficiales: la carrocería es prácticamente la misma, solo que con detalles nuevos en la trompa. La alteración más notable está en la parte inferior, en los faros antiniebla y el paragolpes totalmente renovados.
-                La gama, como decíamos, sigue conformada por las mismas tres versiones 4x4: una versión de entrada SR de 5 plazas solo con caja automática de seis velocidades, y dos versiones superiores SRX de 7 plazas con opciones manual y automática.</p>
+                <p class="card-text">La nueva SW4 presenta novedades en el diseño exterior e interior, cambios mecánicos y actualizaciones en el equipamiento. A diferencia de lo que ocurrió con la Hilux, la nueva gama de SW4 no altera la gama de versiones que venía ofreciendo el modelo hasta la fecha. Los cambios estéticos de la nueva SW4 son superficiales: la carrocería es prácticamente la misma, solo que con detalles nuevos en la trompa. La alteración más notable está en la parte inferior, en los faros antiniebla y el paragolpes totalmente renovados. La gama, como decíamos, sigue conformada por las mismas tres versiones 4x4: una versión de entrada SR de 5 plazas solo con caja automática de seis velocidades, y dos versiones superiores SRX de 7 plazas con opciones manual y automática.</p>
               </div>
             </div>
           </div>
@@ -96,7 +95,7 @@
               <img src="../multimedia/img/rav4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Toyota RAV4</h5>
-                <p class="card-text">El Toyota RAV4 es un SUV compacto que se comercializa en su quinta generación desde diciembre de 2018. Hablamos de uno de los coches precursores del concepto SUV, destacando en estos momentos por ofrecer una mecánica híbrida gasolina que lo convierten en una de las pocas opciones que brinda el mercado con esta configuración.Toyota apostó por un diseño completamente nuevo y diferenciado en la última generación del Toyota RAV4. Entre sus puntos más destacables nos encontramos con una parrilla de grandes dimensiones, el uso de trazos y líneas rectas muy marcadas, así como un diseño de pilar "C" muy característico junto a un techo de tipo flotante que puede ser pintado en un color diferente al del resto de la carrocería.</p>
+                <p class="card-text">El Toyota RAV4 es un SUV compacto que se comercializa en su quinta generación desde diciembre de 2018. Hablamos de uno de los coches precursores del concepto SUV, destacando en estos momentos por ofrecer una mecánica híbrida gasolina que lo convierten en una de las pocas opciones que brinda el mercado con esta configuración. Toyota apostó por un diseño completamente nuevo y diferenciado en la última generación del Toyota RAV4. Entre sus puntos más destacables nos encontramos con una parrilla de grandes dimensiones, el uso de trazos y líneas rectas muy marcadas, así como un diseño de pilar "C" muy característico junto a un techo de tipo flotante que puede ser pintado en un color diferente al del resto de la carrocería.</p>
               </div>
             </div>
           </div>
