--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="pages/ayuda.html">Ayuda</a>
                 </li>
-                  <form class="nav-item">
-                    <button id="btnModalLogin" class="btn btn-outline-primary me-3 toggles" type="button" data-bs-toggle="modal" data-bs-target="#modalLogin">Login</button>
-                    <button id="btnLogout" class="btn btn-outline-secondary d-none toggles" type="button">Logout</button>
-                  </form>
+                  <li class="nav-item">
+                    <a class="nav-link" href="pages/login.html">Ingresar</a>
+                  </li>
               </ul>
             </div>
           </div>
@@ -85,28 +84,6 @@
                     </button>
                   </div>
             </section>
-
-            <div class="modal" id="modalLogin" tabindex="-1" aria-labelledby="modalLoginLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h3 class="modal-title" id="modalLoginLabel">Ingresá</h3>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-                  </div>
-                  <div class="modal-body py-2 px-4">
-                    <input id="emailLogin" class="form-control my-4" type="email" placeholder="Ingresa tu correo electrónico" required/>
-                    <input id="passwordLogin" class="form-control my-4" type="password" placeholder="Ingresa tu contraseña" required/>
-                  </div>
-                  <div class="modal-footer d-block">
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="recordarme"/>
-                      <label class="form-check-label" for="recordarme">Recordarme en este equipo</label>
-                    </div>
-                    <button class="btn btn-outline-primary" id="login" type="submit">Ingresar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
             <div class="quieneSomos texto">
 
                 <h3>¿Quiénes somos?</h3>
@@ -184,7 +161,8 @@
 
  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-     <script src="toyota-master/index.js"></script>
+     <script src="index.js"></script>
+     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
