--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -38,6 +38,9 @@
                       <li class="nav-item">
                         <a class="nav-link" href="../pages/ayuda.html">Ayuda</a>
                       </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../pages/login.html">Ingresar</a>
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -253,6 +256,8 @@
     </footer>
  </div>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+ <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 
 </html>
